
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-bing"
version = "0.1.2"
description = "A Python package for scraping Bing search results"
readme = "README.md"
authors = [{name = "Affan Shaikhsurab", email = "affanshaikhsurabofficial@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["bing", "search", "scraper", "web scraping"]
dependencies = [
    "beautifulsoup4>=4.9.3",
    "requests>=2.25.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/scrape-bing"
Repository = "https://github.com/affanshaikhsurab/scrape-bing.git"